# multi-agent-orchestrator

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py  demo_tasks.py  eval_harness.py
src/orchestrator/: __init__.py  config.py  executor.py  models.py  orchestrator.py  planner.py  state.py
src/providers/: __init__.py  anthropic_provider.py  base.py  groq_provider.py
src/tools/: __init__.py  base.py  registry.py
src/tools/builtins/: __init__.py  calculator.py  http_request.py  weather.py  wikipedia.py
tests/: conftest.py  test_anthropic_provider.py  test_calculator.py  test_config.py  test_demo.py  test_eval_harness.py  test_executor.py  test_groq_provider.py  test_http_request.py  test_live_groq.py  test_live_tools.py  test_models.py  test_orchestrator.py  test_planner.py  test_provider_base.py  test_registry.py  test_scaffold.py  test_state.py  test_tool_roundtrip.py  test_tools_base.py  test_weather.py  test_wikipedia.py
